fix spacing for header and footer

--- a/src/style.css
+++ b/src/style.css
@@ -22,12 +22,6 @@ h1{
     color: var(--header-color);
 }
 
-ul{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: .5rem;
-}
 
 li{
     list-style: none;
@@ -45,12 +39,27 @@ button{
 header{
     background-color: var(--footer-color);
     color: white;
-
     text-align: center;
+    box-shadow: 0px 0px 30px 0px rgba(122, 121, 121, 0.541);
+    display: flex;
+    flex-direction: column;
 }
 
 #header-title{
     font-size: 3.5rem;
+    letter-spacing: .2rem;
+}
+
+nav{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+header ul{
+    display: flex;
+    gap: 25px;
+    align-self: center;
 }
 
 #content{
@@ -61,6 +70,8 @@ header{
     flex: 1 0 auto;
     margin-top: 25px;
 }
+
+
 
 #address{
     color: var(--header-color);
@@ -83,7 +94,9 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: .5rem;
+    margin-top: 10px;
+    /* margin-bottom: 1rem; */
 }
 
 #hours p {
@@ -92,17 +105,26 @@ header{
 }
 
 
-#follow{
-    font-style: italic;
-}
-
 footer{
     flex-shrink: 0;
-    margin-top: 5rem;
+    margin-top: 4;
     background-color: var(--footer-color);
     color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
+}
+
+footer ul{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+
+#follow{
+    font-style: italic;
+    margin-bottom: 5px;
+    font-size: .8rem;
 }
